# grow

./: CMakeLists.txt  README.md  prj.conf
boards/: esp32c6_devkitc.overlay  esp32s3_devkitm.overlay  nrf52840dk_nrf52840.overlay
config/: esp32c6.conf  nrf52840.conf
src/: ble.c  ble.h  button_handler.c  button_handler.h  connectivity.h  data_cache.c  data_cache.h  firebase.c  firebase.h  main.c  sensors.c  sensors.h  serial_number.c  serial_number.h  storage.c  storage.h  tflite_interface.h  wifi.c  wifi.h
src/common/: habitat_data.c  habitat_data.h  ml_analysis.c  ml_analysis.h  plant_analysis.c  plant_analysis.h  water_analysis.c  water_analysis.h
src/platform/esp32/: connectivity.c  firebase.c  sensors.c  tflite_platform.c
src/platform/nrf52/: connectivity.c  sensors.c  tflite_platform.c
